--- a/romanage-client/package.json
+++ b/romanage-client/package.json
@@ -12,6 +12,7 @@
     "register-service-worker": "^1.7.1",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
+    "vuetify": "^2.3.15",
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
