--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "ant-design-vue": "^2.0.0-beta.10",
     "core-js": "^3.6.5",
     "firebase": "^7.24.0",
+    "firebaseui": "^4.7.0",
     "register-service-worker": "^1.7.1",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
